--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://perkspot12.applytojob.com/apply/2BK9BoBS7a/Senior-Product-Manager'>Senior Product Manager - PerkSpot - Career Page</a></h5> 
+<p><span class="badge badge-light">Chicago, IL</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://lemanoosh.com/jobs/junior-product-designer-london-uk/'>Junior Product Designer ? leManoosh</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London Tokyo</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://wpvip.com/careers/senior-product-designer-enterprise/'>Senior Product Designer, Enterprise - Enterprise WordPress hosting, support, and consulting - WordPress VIP</a></h5> 
@@ -56,7 +60,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://joinoyster.recruitee.com/o/product-manager-acquisition'>
+<h5><a href='https://joinoyster.recruitee.com/o/product-manager-acquisition'>
       Product Manager (Acquisition) - Oyster Financial Inc 
     </a></h5> 
 <p><span class="badge badge-light">Mexico Mexico</span></p>
@@ -66,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -86,11 +90,11 @@
 <p><span class="badge badge-light">London London  London  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/blackswan/jobs/4496053002'>Job Application for Product Manager  at Black Swan Data Ltd</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blackswan/jobs/4496053002'>Job Application for Product Manager  at Black Swan Data Ltd</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oClgbfw8&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=n7SJoMwn'>Egnyte Careers - Senior Product Manager - Data Governance (Protect)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oClgbfw8&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=n7SJoMwn'>Egnyte Careers - Senior Product Manager - Data Governance (Protect)</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -224,7 +228,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/1a5c2b9f-de4f-458f-b756-b25dbe684054'>Recurly - Technical Data Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/recurly/1a5c2b9f-de4f-458f-b756-b25dbe684054'>Recurly - Technical Data Product Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -295,7 +299,7 @@ innovation. In close partnership with sales, product marketing, content creators
 Services product portfolio. You will manage the roadmap and feature set of one 
 or?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/servicenow/job/o9aobfwC'>ServiceNow Careers - Principal Product Manager, Platform</a></h5> 
+<h5><a href='https://jobs.jobvite.com/servicenow/job/o9aobfwC'>ServiceNow Careers - Principal Product Manager, Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>18 hours ago ... We're looking for an experienced Principal Product Manager that wants to ... This 
 position reports to: Sr Manager of Product Management, Platform BU.</p>
@@ -308,7 +312,7 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/copperleaf/jobs/4498655002'>Job Application for Product Designer Co-op at Copperleaf</a></h5> 
+<h5><a href='https://boards.greenhouse.io/copperleaf/jobs/4498655002'>Job Application for Product Designer Co-op at Copperleaf</a></h5> 
 <p><span class="badge badge-light">Vancouver, BC  Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -384,7 +388,7 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/flagshipcredit/job/oiLQafwN'>Flagship Credit Acceptance Careers - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/flagshipcredit/job/oiLQafwN'>Flagship Credit Acceptance Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -414,7 +418,7 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/newrelic/job/oGbrbfwd'>New Relic Careers - Field Product Manager - Telemetry Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/oGbrbfwd'>New Relic Careers - Field Product Manager - Telemetry Platform</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  San Francisco, California  Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -431,7 +435,7 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Santa Clara, CASan Diego, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -453,10 +457,6 @@ online education programs and Physician customer relationship management?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Medfar/743999698311406-product-owner'>Medfar Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/soroco/jobs/1915133'>Job Application for Senior Product Manager at Soroco</a></h5> 
-<p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
